--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator || N-Sashank</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
+
 </head>
 <body>
-    
+    <div class="calculator">
+        <div id="Display">
+            
+        </div>
+        <div class="buttons">
+            <button class="operators" onclick="appendToDisplay('/')">/</button>
+            <button class="--grey" onclick="appendToDisplay('8')">8</button>
+            <button class="--grey" onclick="appendToDisplay('7')">7</button>
+            <button class="--grey" onclick="appendToDisplay('9')">9</button>
+            <button class="operators" onclick="appendToDisplay('*')">X</button>
+            <button class="--grey" onclick="appendToDisplay('4')">4</button>
+            <button class="--grey" onclick="appendToDisplay('5')">5</button>
+            <button class="--grey" onclick="appendToDisplay('6')">6</button>
+            <button class="operators" onclick="appendToDisplay('-')">-</button>
+            <button class="--grey" onclick="appendToDisplay('1')">1</button>
+            <button class="--grey" onclick="appendToDisplay('2')">2</button>
+            <button class="--grey" onclick="appendToDisplay('3')">3</button>
+            <button class="operators" onclick="appendToDisplay('+')">+</button>
+            <button class="--grey" onclick="appendToDisplay('0')">0</button>
+            <button class="--grey" onclick="appendToDisplay('.')">.</button>
+            <button  class="solve --grey" onclick="solve()">=</button>
+            <button   class="C --grey" onclick="clearScreen()">C</button>
+        </div>
+    </div>
 </body>
 </html>
